# oberon-risc-hardcaml

./: .gitignore  .gitmodules  AGENT.md  LICENSE  README.md  build-log.md  dune  dune-project  oberon-risc-hardcaml.opam
board/nexys-4/: README.md  build.tcl  cache.ml  cache.mli  cellram.ml  cellram.mli  dune  emit_verilog.ml  flash.tcl  framebuf.ml  gen_verilog.sh  halftone.ml  halftone.mli  nexys4.xdc  nexys4_top.v  program.tcl  soc.ml  soc.mli
board/nexys-4/Mod/: Halftone.Mod  Mandel.Mod
boards/nexys-4/: README.md  RESET-FINDINGS.md  build.tcl  cache.ml  cache.mli  cellram.ml  cellram.mli  cellram_model.ml  cellram_model.mli  dune  emit_board_verilog.ml  emit_verilog.ml  flash.tcl  framebuf.ml  framebuf.mli  gen_verilog.sh  halftone.mli  icache.ml  icache.mli  indexbuf.ml  indexbuf.mli  nexys4.xdc  nexys4_top.v  program.tcl  soc.ml  soc.mli  soc_board.ml  soc_board.mli
lib/: alu.ml  alu.mli  cpu.ml  cpu.mli  divider.ml  divider.mli  dune  fp_adder.ml  fp_adder.mli  fp_divider.ml  fp_divider.mli  fp_multiplier.ml  fp_multiplier.mli  left_shifter.ml  left_shifter.mli  mouse.ml  mouse.mli  multiplier.ml  multiplier.mli  peripherals.ml  peripherals.mli  prom.ml  prom.mli  ps2.ml  ps2.mli  ram.ml  ram.mli  registers.ml  registers.mli  right_shifter.ml  right_shifter.mli  risc5.ml  risc5_core.ml  risc5_core.mli  rom.ml  rom.mli  rs232r.ml  rs232r.mli  rs232t.ml  rs232t.mli  (+14 more)
test/: bench_core.ml  boot_checkpoint_common.ml  boot_checkpoint_common.mli  boot_tb.ml  boot_tb.mli  core_dump.ml  dump_core_trace.ml  dune  emit_board_verilog.ml  fetch-rtl.sh  fork_pool.ml  fork_pool.mli  fp_replay.ml  profile_boot.ml  risc_core_dump.ml  rtl-sources.txt  sd_bridge.ml  sd_bridge.mli  test_boot_checkpoint.ml  test_boot_checkpoint_board.ml  test_cpu_lockstep.ml  test_fp_adder.ml  test_fp_divider.ml  test_fp_multiplier.ml  test_rom.ml  test_scaffold.ml  test_visual_golden.ml  test_visual_golden_board.ml
test/bench/: README.md  bench_boot.ml  bench_core.ml  dune  profile_boot.ml
test/board/nexys-4/: bench_boot.ml  board_tb.ml  board_tb.mli  dune  test_boot_checkpoint_board.ml  test_visual_golden_board.ml
test/boards/nexys-4/: bench_boot.ml  board_tb.ml  board_tb.mli  dune  test_boot_checkpoint_board.ml  test_visual_golden_board.ml
test/cosim/: README.md  core.cpp  cosim.h  cosim_dump.ml  cosim_dump.mli  cosim_run.ml  dump_fp.ml  dump_fp_adder.ml  dump_mouse.ml  dump_ps2.ml  dump_rs232r.ml  dump_rs232t.ml  dump_spi.ml  dump_vid.ml  dune  fetch-rtl.sh  fp_adder.cpp  fp_cosim.h  fp_divider.cpp  fp_dump.ml  fp_multiplier.cpp  mouse.cpp  mouse_cosim.v  mouse_dump.ml  ps2.cpp  ps2_dump.ml  ram16x1d.v  risc5.cpp  rs232_dump.ml  rs232r.cpp  rs232r_dump.ml  rs232t.cpp  rs232t_dump.ml  rtl-sources.txt  run-core.sh  run.sh  spi.cpp  spi_dump.ml  vid.cpp  vid_cosim.v  (+1 more)
test/formal/: README.md  core_blackbox.ml  core_blackbox.mli  dune  formal_equiv.ml  formal_equiv.mli  formal_run.ml  registers_spec.v  run.sh  test_formal.ml  vid_stubs.v  yosys_equiv.ml  yosys_equiv.mli
test/formal/proofs/: core.ys.template  core_stubs.v  mouse.ys.template  mouse_shim.v  sequential.ys.template  vid.ys.template  vid_invariant.v  vid_invariant.ys.template  vid_stubs.v
