; The fast suite (FP replays/fuzz + single-instruction CPU lockstep + the lib's inline
; tests) runs on `dune runtest` in a few seconds. The heavyweight boot-handoff checkpoint
; (~22 s — it boots the real Oberon disk to the OS handoff) is OPT-IN, like the RTL co-sim
; (AGENT.md §6); run it with:  dune build @boot_checkpoint

; Shared off-chip SD card (bit-level SPI slave over Oracle.Disk) used by the three SoC
; integration tests below (boot checkpoint / visual golden / core RTL co-sim capture).

(library
 (name sd_bridge)
 (modules sd_bridge)
 (libraries oracle))

(tests
 (names test_fp_adder test_fp_multiplier test_fp_divider test_cpu_lockstep)
 (modules
  fp_replay
  test_fp_adder
  test_fp_multiplier
  test_fp_divider
  test_cpu_lockstep)
 (libraries risc5 oracle hardcaml hardcaml_waveterm qcheck-core)
 ; Phase 3b: the frozen FP vectors (vendored, data-only) feed test_fp_adder's replay.
 (deps ../vendor/oberon-risc-emu-ocaml/test/data/fp_vectors.txt)
 (preprocess
  (pps ppx_hardcaml)))

; Phase 5: boot-handoff checkpoint (AGENT.md §6 layer 5). Built by @check so it can't rot,
; but run only on demand (it boots the real disk image for millions of interpreter cycles).

(executable
 (name test_boot_checkpoint)
 (modules test_boot_checkpoint)
 (libraries risc5 oracle hardcaml sd_bridge))

(rule
 (alias boot_checkpoint)
 (deps ../vendor/oberon-risc-emu-ocaml/DiskImage/Oberon-2020-08-18.dsk)
 (action
  (run ./test_boot_checkpoint.exe)))

; Phase 6b: visual golden (AGENT.md §6). Continue the boot past the OS handoff and diff the
; framebuffer (a RAM region) against the oracle, rendered for eyeballing. Opt-in (boots the
; real disk image): dune build @visual_golden

(executable
 (name test_visual_golden)
 (modules test_visual_golden)
 (libraries risc5 oracle hardcaml sd_bridge))

(rule
 (alias visual_golden)
 (deps ../vendor/oberon-risc-emu-ocaml/DiskImage/Oberon-2020-08-18.dsk)
 (action
  (run ./test_visual_golden.exe)))

; Boot-stream RTL co-sim — capture half (AGENT.md §6 layer 3, extended to the CPU core).
; Captures the core's per-cycle I/O over the real boot, which test/cosim/risc5.cpp replays
; through RISC5.v under Verilator to assert cycle-exact fidelity (the core's only cycle-level
; check before the Phase-8 proof). Built by @check so it can't rot; run on demand via
; test/cosim/run-core.sh (it boots the real disk).

(executable
 (name dump_core_trace)
 (modules dump_core_trace)
 (libraries risc5 oracle hardcaml unix sd_bridge))

; Boot-stream RTL co-sim — run it (capture the boot trace, then replay through RISC5.v under
; Verilator). OPT-IN (needs verilator + the disk image), like @cosim / @boot_checkpoint:
;   dune build @core_cosim
; Pre-builds the capture exe as a dep so run-core.sh skips its own `dune build` (no nested
; dune in the action). dune caches the result; re-run with `dune build @core_cosim --force`
; or `bash test/cosim/run-core.sh`.

(rule
 (alias core_cosim)
 (deps
  dump_core_trace.exe
  cosim/run-core.sh
  cosim/fetch-rtl.sh
  cosim/rtl-sources.txt
  cosim/cosim.h
  cosim/risc5.cpp
  cosim/ram16x1d.v
  ../vendor/oberon-risc-emu-ocaml/DiskImage/Oberon-2020-08-18.dsk)
 (action
  (run bash cosim/run-core.sh)))
