; The fast suite (FP replays/fuzz + single-instruction CPU lockstep + the lib's inline
; tests) runs on `dune runtest` in a few seconds. The heavyweight boot-handoff checkpoint
; (~22 s — it boots the real Oberon disk to the OS handoff) is OPT-IN, like the RTL co-sim
; (AGENT.md §6); run it with:  dune build @boot_checkpoint

; The fetched reference RTL (test/_po) and all test scratch (test/_work — Verilator obj_dirs,
; dumped traces, the downloaded zip, yosys/z3 intermediates) are git-ignored generated trees;
; mark them data-only so dune never scans them for build rules.

(data_only_dirs _po _work)

; Shared off-chip SD card (bit-level SPI slave over Oracle.Disk) used by the three SoC
; integration tests below (boot checkpoint / visual golden / core RTL co-sim capture).

(library
 (name sd_bridge)
 (modules sd_bridge)
 (libraries oracle))

; Shared bounded forked-worker pool + PASS/FAIL summary, used by both opt-in RTL-fidelity
; runners — cosim's cosim_run and formal's formal_run (see fork_pool.mli).

(library
 (name fork_pool)
 (modules fork_pool)
 (libraries unix))

; Shared SoC-independent half of the boot-handoff checkpoints (disk, oracle boot, §8-aware
; compare, the run driver), used by both test_boot_checkpoint (BRAM) and
; test_boot_checkpoint_board (PSRAM); see boot_checkpoint_common.mli.

(library
 (name boot_checkpoint_common)
 (modules boot_checkpoint_common)
 (libraries oracle))

(tests
 (names test_fp_adder test_fp_multiplier test_fp_divider test_cpu_lockstep)
 (modules
  fp_replay
  test_fp_adder
  test_fp_multiplier
  test_fp_divider
  test_cpu_lockstep)
 (libraries risc5 oracle hardcaml hardcaml_waveterm qcheck-core)
 ; Phase 3b: the frozen FP vectors (vendored, data-only) feed test_fp_adder's replay.
 (deps ../vendor/oberon-risc-emu-ocaml/test/data/fp_vectors.txt)
 (preprocess
  (pps ppx_hardcaml)))

; Phase 5: boot-handoff checkpoint (AGENT.md §6 layer 5). Built by @check so it can't rot,
; but run only on demand (it boots the real disk image for millions of interpreter cycles).

(executable
 (name test_boot_checkpoint)
 (modules test_boot_checkpoint)
 (libraries risc5 oracle hardcaml sd_bridge boot_checkpoint_common))

(rule
 (alias boot_checkpoint)
 (deps ../vendor/oberon-risc-emu-ocaml/DiskImage/Oberon-2020-08-18.dsk)
 (action
  (run ./test_boot_checkpoint.exe)))

; Phase 7: board boot-handoff checkpoint (AGENT.md §6) — the same boot proven through the
; PSRAM board SoC (Soc_board + Cellram + cellram_model). Built by @check so it can't rot;
; run on demand: dune build @boot_checkpoint_board

(executable
 (name test_boot_checkpoint_board)
 (modules test_boot_checkpoint_board)
 (libraries
  risc5
  nexys4_board
  oracle
  hardcaml
  sd_bridge
  boot_checkpoint_common)
 ; the Tb wrapper (Soc_board + cellram_model) derives its own interfaces
 (preprocess
  (pps ppx_hardcaml)))

(rule
 (alias boot_checkpoint_board)
 (deps ../vendor/oberon-risc-emu-ocaml/DiskImage/Oberon-2020-08-18.dsk)
 (action
  (run ./test_boot_checkpoint_board.exe)))

; Phase 6b: visual golden (AGENT.md §6). Continue the boot past the OS handoff and diff the
; framebuffer (a RAM region) against the oracle, rendered for eyeballing. Opt-in (boots the
; real disk image): dune build @visual_golden

(executable
 (name test_visual_golden)
 (modules test_visual_golden)
 (libraries risc5 oracle hardcaml sd_bridge))

(rule
 (alias visual_golden)
 (deps ../vendor/oberon-risc-emu-ocaml/DiskImage/Oberon-2020-08-18.dsk)
 (action
  (run ./test_visual_golden.exe)))

; Boot-stream RTL co-sim for the CPU core (AGENT.md §6 layer 3) — capture half: records the core's
; per-cycle I/O over the real boot, which test/cosim/core.cpp replays through RISC5.v under
; Verilator to assert cycle-exact fidelity. Built by @check so it can't rot; run via the unified
; cosim runner — `dune build @cosim` (all units incl. core), or
; `dune exec test/cosim/cosim_run.exe -- core` (just the core).

(executable
 (name risc_core_dump)
 (modules risc_core_dump)
 (libraries risc5 oracle hardcaml unix sd_bridge))
