; The Nexys 4 board layer (Phase 7) — library nexys4_board. The synthesizable PSRAM
; controller + CPU/video arbiter (cellram) and the board SoC (soc_board), plus cellram_model:
; a behavioural double of the external PSRAM chip, instantiated only by the co-located tests
; (it never reaches synthesis). Depends on risc5 one-way, so lib/ stays board-independent
; (AGENT.md §3). Inline tests co-locate as in lib/ (§6), so their tooling (hardcaml_waveterm,
; qcheck-core) sits in (libraries).

(library
 (name nexys4_board)
 (modules
  (:standard \ emit_verilog))
 (libraries risc5 hardcaml hardcaml_waveterm qcheck-core)
 ; -source-tree-root override: same ppx_expect >= 130.100 path skew as lib/dune.
 (inline_tests
  (flags -source-tree-root .))
 (preprocess
  (pps ppx_hardcaml ppx_expect)))

; Emit the board SoC as Verilog with the boot ROM baked in — the design's own ROM
; (Risc5.Rom), so no oracle. gen_verilog.sh runs it → board/_generated/nexys-4/soc_board.v,
; which nexys4_top.v wraps with the vendor primitives. Built by @check so it can't rot.

(executable
 (name emit_verilog)
 (modules emit_verilog)
 (libraries hardcaml nexys4_board risc5))
