; Phase-9 benchmarks & profilers (AGENT.md §5) — the measure-before/after-you-optimise
; gauges for the DSP-multiplier experiment. Kept out of the always-on `dune runtest`
; (they print reports, not pass/fail assertions); drive them by alias:
;   dune build @bench           core cycles/op, iterative vs DSP multiplier
;   dune build @profile_boot    dynamic MUL/DIV count over a boot (Amdahl context)
;   dune build @bench_boot      end-to-end boot cycles on the PSRAM SoC (memory-bound context)

(executable
 (name bench_core)
 (modules bench_core)
 (libraries risc5 hardcaml))

(rule
 (alias bench)
 (action
  (run ./bench_core.exe)))

(executable
 (name profile_boot)
 (modules profile_boot)
 (libraries oracle boot_checkpoint_common))

(rule
 (alias profile_boot)
 (deps ../../vendor/oberon-risc-emu-ocaml/DiskImage/Oberon-2020-08-18.dsk)
 (action
  (run ./profile_boot.exe)))

; end-to-end: boot the PSRAM board SoC to the handoff, count total cycles (DSP-mul A/B +
; read-latency sweep) — the memory-bound context the other two can't see.

(executable
 (name bench_boot)
 (modules bench_boot)
 ; board_tb (test/boards/nexys-4) brings the Soc_board+Cellram_model wiring — and risc5 /
 ; nexys4_board transitively; the bench itself no longer derives interfaces, so no ppx.
 (libraries board_tb oracle hardcaml sd_bridge boot_checkpoint_common))

(rule
 (alias bench_boot)
 (deps ../../vendor/oberon-risc-emu-ocaml/DiskImage/Oberon-2020-08-18.dsk)
 (action
  (run ./bench_boot.exe)))
