; RTL-fidelity co-sim helpers (Phase-8-style preview, OPT-IN — not a dune test).
; dump_fp <unit> runs the named Hardcaml FP unit over a stimulus set and dumps its outputs;
; dump_spi does the same for the SPI master (its own dumper — a serial handshake unit, not
; stall-based). The Verilator harness (<unit>.cpp + shared fp_cosim.h, driven by run.sh) replays
; them through the reference _po/verilog/src/<Unit>.v and asserts RTL outputs == port outputs AND
; equal cycle timing. The dumpers build under `dune build @check` (Verilator-free, so they can't
; silently rot); the actual cross-check is run.sh.

(executables
 (names dump_fp dump_spi dump_rs232t)
 (libraries risc5 hardcaml))

; Uniform front door, mirroring @boot_checkpoint: `dune build @cosim` runs every unit. OPT-IN
; (needs verilator + network on first fetch), so it's kept out of @runtest/@check. The dumper
; exes are declared deps so dune pre-builds them — run.sh then skips its own `dune build`, so the
; action never nests a dune invocation. Like @boot_checkpoint, dune caches the result: re-run with
; `dune build @cosim --force`, or `bash test/cosim/run.sh <unit>` for a single unit.

(rule
 (alias cosim)
 (deps
  run.sh
  fetch-rtl.sh
  rtl-sources.txt
  fp_cosim.h
  (glob_files *.cpp)
  dump_fp.exe
  dump_spi.exe
  dump_rs232t.exe)
 (action
  (run bash run.sh)))
