; RTL-fidelity co-sim (OPT-IN — not a dune test; needs verilator). Each Hardcaml unit is asserted
; bit- and cycle-exact to its reference Verilog: <unit>_dump.ml dumps the port's outputs over a
; stimulus set, and the Verilator harness <unit>.cpp (+ shared cosim.h) replays them through the
; reference test/_po/verilog/src/<Unit>.v, checking value AND timing. The CPU core is a boot-stream
; capture/replay instead (test/risc_core_dump.ml + core.cpp). cosim_run.ml is the parallel runner that
; drives them all; the dumpers build under `dune build @check` so they can't silently rot.

(executable
 (name cosim_run)
 (modules cosim_run)
 (libraries unix fork_pool))

(executables
 (names fp_dump spi_dump rs232_dump ps2_dump vid_dump mouse_dump)
 (modules
  cosim_dump
  fp_dump
  spi_dump
  rs232_dump
  ps2_dump
  vid_dump
  mouse_dump)
 (libraries risc5 hardcaml))

; Uniform front door: `dune build @cosim` runs every unit (the 9 peripherals/FP + the CPU core)
; in parallel via cosim_run. OPT-IN (verilator + network on first fetch), kept out of
; @runtest/@check. The exes are declared deps so dune pre-builds them — cosim_run then makes no
; nested `dune build`. dune caches the result: re-run with `dune build @cosim --force`, or
; `dune exec test/cosim/cosim_run.exe -- <unit>` for a single unit.

(rule
 (alias cosim)
 (deps
  cosim_run.exe
  fp_dump.exe
  spi_dump.exe
  rs232_dump.exe
  ps2_dump.exe
  vid_dump.exe
  mouse_dump.exe
  ../risc_core_dump.exe
  ../fetch-rtl.sh
  ../rtl-sources.txt
  cosim.h
  (glob_files *.cpp)
  (glob_files *.v)
  ../../vendor/oberon-risc-emu-ocaml/DiskImage/Oberon-2020-08-18.dsk)
 (action
  (run %{exe:cosim_run.exe})))
