; Formal logic-equivalence (AGENT.md §6, the "Formal" layer): prove our combinational
; Hardcaml units compute the identical function as their reference Verilog, via
; hardcaml_of_verilog (yosys import) + hardcaml_verify (Sec — a SAT equivalence check, z3).
; The exhaustive counterpart to test/cosim (which samples the same comparison via Verilator).
;
; OPT-IN — needs yosys + z3 on PATH (like cosim needs verilator), so it's kept out of
; @runtest. test_formal is the self-contained OCaml runner (cd to repo root, tool check, RTL
; fetch, then a parallel Fork_pool over the checks). The exe builds under @check so it can't
; rot; run the proof with `dune build @formal` or `dune exec test/formal/test_formal.exe`.

(executable
 (name test_formal)
 (modules test_formal formal_equiv yosys_equiv core_blackbox)
 (libraries
  risc5
  hardcaml
  hardcaml_verify
  hardcaml_of_verilog
  jane_rope
  base
  stdio
  fork_pool))

; Uniform front door, mirroring @cosim: `dune build @formal` proves every unit by running the
; pre-built test_formal.exe directly (no wrapper script, no nested dune). For a single check or
; a custom job count: `dune exec test/formal/test_formal.exe -- <check> [jobs]`. Re-run with
; `dune build @formal --force`.

(rule
 (alias formal)
 (deps
  test_formal.exe
  ../fetch-rtl.sh
  ../rtl-sources.txt
  registers_spec.v
  core_stubs.v
  mouse_shim.v
  vid_stubs.v
  vid_invariant.v)
 (action
  (run %{exe:test_formal.exe})))
