; Formal logic-equivalence (AGENT.md §6, the "Formal" layer): prove our combinational
; Hardcaml units compute the identical function as their reference Verilog, via
; hardcaml_of_verilog (yosys import) + hardcaml_verify (Sec — a SAT equivalence check, z3).
; The exhaustive counterpart to test/cosim (which samples the same comparison via Verilator).
;
; OPT-IN — needs yosys + z3 on PATH (like cosim needs verilator), so it's kept out of
; @runtest. formal_run is the self-contained OCaml runner (cd to repo root, tool check, RTL
; fetch, then a parallel Fork_pool over the checks). The exe builds under @check so it can't
; rot; run the proof with `dune build @formal` or `dune exec test/formal/formal_run.exe`.

(executable
 (name formal_run)
 (modules formal_run formal_equiv yosys_equiv core_blackbox)
 (libraries
  risc5
  hardcaml
  hardcaml_verify
  hardcaml_of_verilog
  jane_rope
  base
  stdio
  fork_pool))

; Uniform front door, mirroring @cosim: `dune build @formal` proves every unit by running the
; pre-built formal_run.exe directly (no wrapper script, no nested dune). For a single check or
; a custom job count: `dune exec test/formal/formal_run.exe -- <check> [jobs]`. Re-run with
; `dune build @formal --force`.

(rule
 (alias formal)
 (deps
  formal_run.exe
  ../fetch-rtl.sh
  ../rtl-sources.txt
  proofs/sequential.ys.template
  proofs/mouse.ys.template
  proofs/core.ys.template
  proofs/vid.ys.template
  proofs/vid_invariant.ys.template
  proofs/registers_spec.v
  proofs/core_stubs.v
  proofs/mouse_shim.v
  proofs/vid_stubs.v
  proofs/vid_invariant.v)
 (action
  (run %{exe:formal_run.exe})))
