; Board (Nexys 4) SoC integration tests + the board bench — mirror boards/nexys-4/ under
; test/. All close the PSRAM board SoC with cellram_model through the shared board_tb
; harness (this dir). Built by @check so they can't rot; opt-in to run, like the other
; heavyweight checks (§6):
;   dune build @boot_checkpoint_board   dune build @visual_golden_board
;   dune build @bench_boot              (the board gauge; index in test/bench/README.md)

(library
 (name board_tb)
 (modules board_tb)
 (libraries risc5 nexys4_board hardcaml)
 (preprocess
  (pps ppx_hardcaml)))

; Phase 7: board boot-handoff checkpoint — the same boot proven through the PSRAM board SoC
; (Soc_board + cellram_model), the SoC-independent half shared with the BRAM checkpoint via
; boot_checkpoint_common. Run: dune build @boot_checkpoint_board

(executable
 (name test_boot_checkpoint_board)
 (modules test_boot_checkpoint_board)
 (libraries
  risc5
  nexys4_board
  oracle
  hardcaml
  sd_bridge
  boot_checkpoint_common
  board_tb))

(rule
 (alias boot_checkpoint_board)
 (deps ../../../vendor/oberon-risc-emu-ocaml/DiskImage/Oberon-2020-08-18.dsk)
 (action
  (run ./test_boot_checkpoint_board.exe)))

; Phase-10a: board visual golden WITH the I-cache — the coherence proof. Boots the PSRAM board
; SoC with the cache ON past the handoff and asserts the desktop framebuffer is byte-identical
; to the oracle. Run: dune build @visual_golden_board

(executable
 (name test_visual_golden_board)
 (modules test_visual_golden_board)
 (libraries risc5 nexys4_board oracle hardcaml sd_bridge board_tb))

(rule
 (alias visual_golden_board)
 (deps ../../../vendor/oberon-risc-emu-ocaml/DiskImage/Oberon-2020-08-18.dsk)
 (action
  (run ./test_visual_golden_board.exe)))

; Phase-9/10 board gauge (a report, not a pass/fail test): end-to-end boot cycles on the
; PSRAM board SoC + the running-OS stall profile / video A/B / cache sweeps. It lives here
; (not test/bench/) because it is board-specific through and through — it drives Soc_board's
; full knob surface via board_tb and probes board signal names — while test/bench/ keeps the
; target-independent gauges. The gauge index is test/bench/README.md.

(executable
 (name bench_boot)
 (modules bench_boot)
 ; board_tb brings the Soc_board+Cellram_model wiring — and risc5 / nexys4_board
 ; transitively; the bench itself derives no interfaces, so no ppx.
 (libraries board_tb oracle hardcaml sd_bridge boot_checkpoint_common))

(rule
 (alias bench_boot)
 (deps ../../../vendor/oberon-risc-emu-ocaml/DiskImage/Oberon-2020-08-18.dsk)
 (action
  (run ./bench_boot.exe)))
